--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-oauth/google": "^0.12.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
